--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set \"GENERATE_SOURCEMAP=false\" &&  react-scripts build && compress-cra -c /compress-cra.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -62,6 +62,7 @@
     "@types/react-calendar": "3.5.0",
     "@types/react-csv": "1.1.2",
     "@types/react-router-dom": "5.3.3",
+    "compress-create-react-app": "1.2.1",
     "sass": "1.49.8"
   }
 }
