--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "3.5.9",
-    "@emotion/react": "11.7.1",
-    "@emotion/styled": "11.6.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "5.4.2",
-    "@mui/material": "5.4.2",
+    "@mui/material": "^5.4.2",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.3",
     "@testing-library/user-event": "13.5.0",
@@ -29,6 +29,7 @@
     "react-redux": "7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.1",
     "redux": "4.1.2",
     "typescript": "4.5.5",
     "web-vitals": "2.1.4"
