--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
     "ethers": "5.6.0",
-    "graphql": "16.3.0",
+    "graphiql": "^1.9.6",
+    "graphql": "^16.3.0",
     "humanize-string": "3.0.0",
     "moment": "2.29.1",
     "pluralize": "8.0.0",
     "query-string": "7.1.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-calendar": "3.7.0",
     "react-csv": "2.2.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
